feat(client): implement client management (CRUD + active contracts endpoint)
- Update ClientController with new endpoints
- Add DTOs for person/company creation and update
- Improve ClientService with domain rules and soft delete
- Update repositories and mapper for Client hierarchy